[package]
name = "readable"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
sync_wrapper = "0.1.2"
readable-readability = "0.4.0"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
reqwest = "0.11.22"
chrono = "0.4.31"
kuchiki = "0.8.1"
shuttle-axum = "0.28.0"
shuttle-runtime = "0.28.0"
once_cell = "1.18.0"
tower-http = { version = "0.4.4", features = ["fs"] }

